--- a/src/design/molecules/badge-list/badge-list.component.scss
+++ b/src/design/molecules/badge-list/badge-list.component.scss
@@ -14,4 +14,12 @@
     gap: 12px;
     flex-wrap: wrap;
   }
+
+  &__create-badge {
+    display: flex;
+  }
+
+  &__create-link {
+    text-decoration: none;
+  }
 }
