--- a/src/design/organisms/sessionaudio-player/sessionaudio-player.component.scss
+++ b/src/design/organisms/sessionaudio-player/sessionaudio-player.component.scss
@@ -1,28 +1,31 @@
-.timestamp{
-  &__list{
+.timestamp {
+  &__list {
     margin-top: var(--spacer-3);
   }
-  
-  &__create-button{
-    justify-content: center;
-    margin-top: var(--spacer-3);
+
+  &__create-button {
+    margin-top: var(--spacer-4);
+    margin-bottom: var(--spacer-4);
   }
-  
-  &__create-form{
+
+  &__create-form {
     width: 100%;
     text-align: center;
     font-weight: bold;
   }
 }
 
-.list{
-  &__timestamp{
+.list {
+  gap: var(--spacer-1);
+  display: flex;
+  flex-direction: column;
+  &__timestamp {
     padding-bottom: var(--spacer-1);
     display: block;
   }
 }
 
-.container{
+.container {
   padding-left: var(--spacer-0);
-  padding-right: var(--spacer-0)
+  padding-right: var(--spacer-0);
 }
