--- a/src/app/campaign/pages/sessionaudio-page/sessionaudio-page.component.html
+++ b/src/app/campaign/pages/sessionaudio-page/sessionaudio-page.component.html
@@ -7,5 +7,7 @@
     [serverUrl]="serverUrl"
     [sessionaudio]="sessionaudio"
     [timestamps]="store.timestamps()"
+    (createTimestamp)="store.createTimestamp($event)"
+    (deleteTimestamp)="store.deleteTimestamp($event.pk!)"
   />
 }
