--- a/src/design/molecules/link-entry/link-entry.component.scss
+++ b/src/design/molecules/link-entry/link-entry.component.scss
@@ -1,35 +1,41 @@
-.linkentry{
-  &--delete{
+.linkentry {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: var(--spacer-4);
+
+  &--delete {
     justify-content: center;
   }
-  
-  &__link{
+
+  &__link {
     text-align: end;
     cursor: pointer;
   }
-  
-  &__label{
+
+  &__label {
+    flex: 1;
     text-align: start;
-    overflow-x: scroll;
+    text-overflow: ellipsis;
   }
-  
-  &__box{
+
+  &__box {
     background-color: var(--bs-secondary);
-    padding: var(--spacer-2);  
+    padding: var(--spacer-2);
   }
-  
-  &__delete{
+
+  &__delete {
     display: flex;
     justify-content: flex-end;
   }
-  
-  &__delete-button{
+
+  &__delete-button {
     width: fit-content;
     display: inline-block;
   }
 }
 
-.box{
+.box {
   display: flex;
   flex-direction: row;
   width: fit-content;
@@ -37,12 +43,12 @@
   border-color: var(--bs-danger);
   border-style: solid;
   border-width: 1px;
-  
-  &__message{
+
+  &__message {
     font-weight: bold;
   }
-  
-  &__button{
+
+  &__button {
     width: fit-content;
     margin-left: var(--spacer-3);
   }
