--- a/src/design/templates/character/character.component.html
+++ b/src/design/templates/character/character.component.html
@@ -2,7 +2,7 @@
   <article class="container character">
     @if (canUpdate()) {
       <div class="character__edit-container">
-        <a [routerLink]="updateUrl()">
+        <a [routerLink]="updateUrl()" tabindex="-1">
           <app-button
             [title]="'Edit ' + character().name"
             [icon]="'pencil'"
