--- a/src/design/templates/creature/creature.component.html
+++ b/src/design/templates/creature/creature.component.html
@@ -2,7 +2,7 @@
   <article class="container creature">
     @if (canUpdate()) {
       <div class="creature__edit-container">
-        <a [routerLink]="updateUrl()">
+        <a [routerLink]="updateUrl()" tabindex="-1">
           <app-button [icon]="'pencil'" [type]="'SECONDARY'"></app-button>
         </a>
       </div>
