--- a/src/design/templates/quest/quest.component.html
+++ b/src/design/templates/quest/quest.component.html
@@ -2,7 +2,7 @@
   <article class="container quest">
     @if (canUpdate()) {
       <div class="quest__edit-container">
-        <a [routerLink]="updateUrl()">
+        <a [routerLink]="updateUrl()" tabindex="-1">
           <app-button [icon]="'pencil'" [type]="'SECONDARY'"></app-button>
         </a>
       </div>
