--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<app-page
-  [serverUrl]="serverUrl"
-  [hasCampaignAdminPrivileges]="hasCampaignAdminRights$() === true"
-  [campaign]="campaign$() ?? undefined"
-  (logout)="logout()"
-></app-page>
+<app-page [serverUrl]="serverUrl" (logout)="logout()"></app-page>
 
 <app-toast-overlay></app-toast-overlay>
