--- a/src/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/design/organisms/icon-card-list/icon-card-list.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    @for (article of articles; track $index) {
+    @for (article of articles(); track $index) {
       <div class="entry col-6 col-lg-4 col-xl-3">
         <a
           class="entry__link"
