--- a/src/design/organisms/page-container/page-container.component.scss
+++ b/src/design/organisms/page-container/page-container.component.scss
@@ -18,10 +18,13 @@
     max-width: 60rem;
     width: 100%;
     background-color: var(--wiki-bg-transparent);
-    border-radius: var(--bs-border-radius);
     padding: var(--spacer-3) var(--spacer-3) var(--spacer-5) var(--spacer-3);
     margin-bottom: var(--spacer-4);
     color: white;
+
+    @include media-breakpoint-up(md) {
+      border-radius: var(--bs-border-radius);
+    }
 
     @include media-breakpoint-up(lg) {
       padding: var(--spacer-4);
