--- a/src/design/organisms/sidebar/sidebar.component.html
+++ b/src/design/organisms/sidebar/sidebar.component.html
@@ -1,6 +1,5 @@
 @if (campaign()) {
-  <nav class="sidebar">
-    <!-- Brand -->
+  <div class="offcanvas-header">
     <div class="sidebar__brand brand">
       <div class="brand__back" title="campaign-overview">
         <a [routerLink]="campaignOverviewUrl" class="brand__back-link">
@@ -18,14 +17,17 @@
             <img
               class="brand__icon"
               [src]="serverUrl + campaign()?.icon"
-              alt="..."
+              alt="To Home Page"
             />
-            <div class="brand__home-link-text-text">{{ campaign()?.name }}</div>
+            <div class="brand__home-link-text-text">
+              {{ campaign()?.name }}
+            </div>
           </h4>
         </a>
       </div>
     </div>
-
+  </div>
+  <div class="offcanvas-body">
     <ul class="sidebar__entries">
       <!-- Admin Section -->
       @if (hasCampaignAdminPrivileges()) {
@@ -72,7 +74,7 @@
         </a>
       </li>
     </ul>
-  </nav>
+  </div>
 }
 
 <ng-template #nonCampaignBrand>
