--- a/src/design/organisms/sidebar/sidebar.component.scss
+++ b/src/design/organisms/sidebar/sidebar.component.scss
@@ -6,18 +6,27 @@ a {
   --entry-hover-color: var(--bs-link-hover-color);
   --entry-hover-bg-color: var(--bs-gray-700);
   --brand-height: 3rem;
+  background-color: var(--bs-gray-dark);
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  overflow-x: hidden; //Necessary because when sidebar folds out, x scrollbar appears
+  max-height: 100vh;
+  height: 100%;
+}
+
+.offcanvas-body,
+.offcanvas-header {
+  --bs-offcanvas-padding-y: 0;
+  --bs-offcanvas-padding-x: 0;
+}
+
+.offcanvas-body {
+  display: flex;
+  flex-direction: column;
 }
 
 .sidebar {
-  background-color: var(--bs-gray-dark);
-  overflow-y: auto;
-  overflow-x: hidden; //Necessary because when sidebar folds out, x scrollbar appears
-  display: flex;
-  flex-direction: column;
-  height: inherit;
-  width: inherit;
-  max-width: inherit;
-
   &__brand {
     list-style-type: none;
     margin: 0;
@@ -70,6 +79,7 @@ a {
   display: flex;
   height: var(--brand-height);
   font-size: 1.5rem;
+  flex: 1;
 
   &__back {
     :hover {
@@ -97,7 +107,6 @@ a {
   &__home {
     height: var(--brand-height);
     flex: 1;
-    max-width: 80%;
 
     :hover {
       color: var(--entry-hover-color) !important;
