Finetune scrolling and sidebar

--- a/src/app/campaign/pages/home-page/home-page.component.html
+++ b/src/app/campaign/pages/home-page/home-page.component.html
@@ -3,6 +3,7 @@
   [campaignData]="campaignData()"
   [articles]="recentlyUpdatedArticles()"
   [canLoadMore]="hasMoreArticles() === true"
+  [isLoading]="store.isLoading()"
   (search)="search($event)"
   (loadArticlePage)="loadArticlePage($event)"
 ></app-home>
