--- a/src/design/organisms/sidebar/sidebar.component.scss
+++ b/src/design/organisms/sidebar/sidebar.component.scss
@@ -11,7 +11,7 @@ a {
   flex-direction: column;
   overflow-y: auto;
   overflow-x: hidden; //Necessary because when sidebar folds out, x scrollbar appears
-  max-height: 100vh;
+  max-height: 100mvh;
   height: 100%;
 }
 
