--- a/src/design/templates/home/home.component.html
+++ b/src/design/templates/home/home.component.html
@@ -1,33 +1,34 @@
 <app-page-container>
   <article class="home">
     <!-- Heading -->
-    @if (campaignData) {
+    @if (campaignData()) {
       <header class="home__heading-container heading-container">
         <img
           class="heading-container__icon"
-          [src]="serverUrl + campaignData.icon"
+          [src]="serverUrl() + campaignData()?.icon"
           [alt]="DEFAULT_ICON"
         />
         <h1 class="heading-container__heading">
-          {{ campaignData.name }}
+          {{ campaignData()?.name }}
         </h1>
         <app-html-text
           class="heading-container__subheading"
-          [text]="campaignData.subtitle"
+          [text]="campaignData()?.subtitle ?? ''"
         ></app-html-text>
       </header>
     }
 
     <!-- Search Bar -->
     <app-search-field
+      class="home__search-bar"
       [placeholder]="'Search for Articles...'"
       (search)="search.emit($event)"
     ></app-search-field>
 
     <!-- News -->
-    <app-icon-card-list [articles]="articleEntries"></app-icon-card-list>
+    <app-icon-card-list [articles]="articleEntries()"></app-icon-card-list>
 
-    @if (isLoading) {
+    @if (isLoading()) {
       <app-spinner class="loading__spinner"></app-spinner>
     }
   </article>
