--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,30 +12,6 @@ body {
   overflow-x: hidden;
 }
 
-.highlight {
-  background-color: var(--highlight-gray);
-}
-
-.hover-highlight {
-  transition: 0.2s background-color;
-}
-
-.pointer {
-  cursor: pointer;
-}
-
-.my-tooltip {
-  border-color: #c6e2f5;
-  --bs-tooltip-bg: #d6eaf8;
-  --bs-tooltip-color: var(--bs-black);
-}
-
-@media (hover: hover) and (pointer: fine) {
-  .hover-highlight:hover {
-    background-color: var(--highlight-gray);
-  }
-}
-
 h1,
 h2,
 h3,
@@ -66,6 +42,74 @@ blockquote {
   font-style: italic;
   margin: var(--spacer-0);
   padding: var(--spacer-2) var(--spacer-0) var(--spacer-1) var(--spacer-4);
+}
+
+.highlight {
+  background-color: var(--highlight-gray);
+}
+
+.hover-highlight {
+  transition: 0.2s background-color;
+}
+
+.pointer {
+  cursor: pointer;
+}
+
+.my-tooltip {
+  border-color: #c6e2f5;
+  --bs-tooltip-bg: #d6eaf8;
+  --bs-tooltip-color: var(--bs-black);
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .hover-highlight:hover {
+    background-color: var(--highlight-gray);
+  }
+}
+
+:root {
+  // Chromium scrollbar
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--bs-light);
+    border-radius: 10px;
+    filter: brightness(200%);
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--bs-dark);
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: var(--bs-dark);
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  }
+
+  ::-webkit-scrollbar-corner {
+    background-color: #f5f5f5;
+  }
+
+  ::-webkit-scrollbar-button {
+    display: none;
+  }
+
+  ::-webkit-scrollbar-track-piece {
+    background-color: var(--bs-secondary);
+  }
+
+  ::-webkit-scrollbar-thumb:vertical {
+    min-height: 50px;
+  }
+
+  ::-webkit-scrollbar-thumb:horizontal {
+    min-width: 50px;
+  }
 }
 
 @import "./custom_ngbootstrap.scss";
