--- a/src/design/organisms/page/page.component.scss
+++ b/src/design/organisms/page/page.component.scss
@@ -31,8 +31,20 @@
 
     .navbar-brand {
       flex: 1;
+      max-width: 100%;
+      text-overflow: ellipsis;
+      overflow: hidden;
       text-align: center;
       margin-right: unset;
+
+      .navbar-brand-icon {
+        --brand-height: calc(var(--navbar-height) - 6px);
+        height: var(--brand-height);
+        width: var(--brand-height);
+        border-radius: 50%;
+        margin-right: var(--spacer-2);
+        margin-left: var(--spacer-2);
+      }
     }
   }
 
