--- a/src/app/campaign/pages/marker-page/marker-page.component.html
+++ b/src/app/campaign/pages/marker-page/marker-page.component.html
@@ -4,5 +4,6 @@
     [canDelete]="store.hasWritePermission()"
     [canUpdate]="store.hasWritePermission()"
     [marker]="marker"
+    (markerDelete)="store.deleteMarker($event.pk!)"
   ></app-marker>
 }
