--- a/src/design/molecules/edit-toggle/edit-toggle.component.html
+++ b/src/design/molecules/edit-toggle/edit-toggle.component.html
@@ -2,5 +2,5 @@
   class="edit-toggle"
   [type]="buttonType()"
   (click)="onClick()"
-  [icon]="_toggled ? 'times' : 'pencil'"
+  [icon]="_toggled() ? 'times' : 'pencil'"
 ></app-button>
