--- a/src/design/organisms/sidebar/sidebar.component.scss
+++ b/src/design/organisms/sidebar/sidebar.component.scss
@@ -142,7 +142,7 @@ a {
   &__icon {
     height: 32px;
     width: 32px;
-    border-radius: 50%;
+    border-radius: var(--bs-border-radius);
   }
 }
 
