--- a/src/global_class_modifications.scss
+++ b/src/global_class_modifications.scss
@@ -21,9 +21,19 @@
   border-radius: var(--bs-border-radius);
 }
 
-a {
+a,
+.a {
   font-weight: bold;
   text-decoration-style: dashed;
+}
+
+.a {
+  &:focus,
+  &:focus-within,
+  &:hover,
+  &:focus-visible {
+    outline: var(--focus-outline);
+  }
 }
 
 button {
