--- a/src/design/templates/home/home.component.scss
+++ b/src/design/templates/home/home.component.scss
@@ -29,7 +29,7 @@
     align-self: center;
     width: 128px;
     height: 128px;
-    border-radius: 50%;
+    border-radius: var(--bs-border-radius);
   }
 }
 
