--- a/src/styles.scss
+++ b/src/styles.scss
@@ -76,7 +76,7 @@ blockquote {
 
   ::-webkit-scrollbar-thumb {
     background-color: var(--bs-light);
-    border-radius: 10px;
+    border-radius: var(--bs-border-radius);
     filter: brightness(200%);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   }
@@ -87,7 +87,7 @@ blockquote {
 
   ::-webkit-scrollbar-track {
     background-color: var(--bs-dark);
-    border-radius: 10px;
+    border-radius: var(--bs-border-radius);
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
   }
 
