Many tiny improvements

--- a/src/design/organisms/page/page.component.html
+++ b/src/design/organisms/page/page.component.html
@@ -14,14 +14,16 @@
         >
           <app-icon [icon]="'bars'" />
         </button>
-        <strong class="navbar-brand">
-          <img
-            class="navbar-brand-icon"
-            [src]="serverUrl() + globalStore.currentCampaign()?.icon"
-            alt="To Home Page"
-          />
-          {{ titleService.currentPageTitle() }}
-        </strong>
+        <a class="navbar-brand" [routerLink]="homeUrl()">
+          <strong>
+            <img
+              class="navbar-brand-icon"
+              [src]="serverUrl() + globalStore.currentCampaign()?.icon"
+              alt="To Home Page"
+            />
+            {{ titleService.currentPageTitle() }}
+          </strong>
+        </a>
       </div>
     </nav>
   </div>
