--- a/src/design/molecules/collapsible-panel/collapsible-panel.component.scss
+++ b/src/design/molecules/collapsible-panel/collapsible-panel.component.scss
@@ -10,6 +10,7 @@
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
+    text-align: start;
     margin-bottom: 0px;
   }
 
