--- a/src/design/organisms/page/page.component.scss
+++ b/src/design/organisms/page/page.component.scss
@@ -101,3 +101,12 @@
     }
   }
 }
+
+// Necessary so that the slide animation of campaign-overview does not mix with the component underneath it
+:host {
+  ::ng-deep {
+    router-outlet + * {
+      z-index: 1;
+    }
+  }
+}
