--- a/src/design/templates/campaign-overview/campaign-overview.component.scss
+++ b/src/design/templates/campaign-overview/campaign-overview.component.scss
@@ -1,6 +1,6 @@
-@import '/src/screens.scss';
+@import "/src/screens.scss";
 
-.container{
+.container {
   width: 100vw;
   min-height: 100vh; //Ensures the campaigns take up at least the whole screen, maybe more
   max-width: unset !important;
@@ -8,11 +8,10 @@
   display: flex;
   flex-direction: column;
   background-color: var(--bs-black);
-  position: relative;
 }
 
-.campaign{
-  &__heading{
+.campaign {
+  &__heading {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,39 +19,38 @@
   }
 }
 
-.heading{
+.heading {
   background-color: var(--wiki-bg-transparent);
 
-  &__buttons{
-    
+  &__buttons {
   }
-  
-  &__button{
+
+  &__button {
     margin-top: var(--spacer-1);
     margin-bottom: var(--spacer-1);
     display: inline-block;
     width: 100%;
-    
-    @include media-breakpoint-up(sm){
+
+    @include media-breakpoint-up(sm) {
       width: unset;
       margin: var(--spacer-2);
     }
   }
-  
-  &__text{
+
+  &__text {
     flex: 1;
     text-align: center;
   }
 }
 
-.body{
+.body {
   flex: 1;
   height: 100%;
   display: flex;
   flex-direction: column;
   overflow-y: scroll;
-  
-  &__images{
+
+  &__images {
     height: 100%;
     display: flex;
   }
