--- a/src/app/general/pages/campaign-overview-page/campaign-overview-page.component.scss
+++ b/src/app/general/pages/campaign-overview-page/campaign-overview-page.component.scss
@@ -1,4 +1,7 @@
 :host {
   position: fixed;
   z-index: calc(var(--bs-offcanvas-zindex) + 1);
+  max-height: 100vh;
+  overflow-y: scroll;
+  overscroll-behavior: none;
 }
