--- a/src/design/templates/campaign-overview/campaign-overview.component.scss
+++ b/src/design/templates/campaign-overview/campaign-overview.component.scss
@@ -21,6 +21,8 @@
 
 .heading {
   background-color: var(--wiki-bg-transparent);
+  display: flex;
+  flex-direction: column;
 
   &__buttons {
   }
@@ -48,10 +50,13 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
 
   &__images {
     height: 100%;
     display: flex;
   }
+}
+
+app-button {
+  display: unset;
 }
