--- a/src/design/templates/home/home.component.scss
+++ b/src/design/templates/home/home.component.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   align-items: center;
 
-  &__heading-ontainer {
-    margin-bottom: var(--spacer-1);
+  &__heading-container {
+    margin-bottom: var(--spacer-3);
   }
 
   &__search-bar {
