--- a/src/design/templates/site-admin/site-admin.component.html
+++ b/src/design/templates/site-admin/site-admin.component.html
@@ -1,5 +1,5 @@
 <app-page-container>
-  <article class="container site-admin">
+  <article class="site-admin">
     <a class="site-admin__return-button" [routerLink]="campaignOverviewUrl">
       <app-button
         [type]="'SECONDARY'"
