Mildly better screenuse

--- a/src/design/templates/quest-overview/quest-overview.component.html
+++ b/src/design/templates/quest-overview/quest-overview.component.html
@@ -1,5 +1,5 @@
 <app-page-container>
-  <article class="container quests">
+  <article class="quests">
     <!-- Heading -->
     <h1 class="quests__heading">Quests</h1>
 
