Fix icons for production use

--- a/src/design/atoms/icon/icon.component.html
+++ b/src/design/atoms/icon/icon.component.html
@@ -1,7 +1,1 @@
-<div
-  [ngClass]="{
-    fas: iconType() === 'SOLID',
-    fa: iconType() === 'REGULAR',
-  }"
-  class="fa-{{ icon() }}"
-></div>
+<div class="{{ iconType() }} fa-{{ icon() }}"></div>
