--- a/src/design/organisms/session/session.component.html
+++ b/src/design/organisms/session/session.component.html
@@ -78,7 +78,7 @@
       <div class="body__entry">
         <h5 class="body__subheading">
           <a [routerLink]="sessionAudioUrl()" class="body__link">
-            <app-icon [icon]="'file-audio-o'"></app-icon>
+            <app-icon [icon]="'file-audio'"></app-icon>
             Recording
           </a>
         </h5>
