--- a/src/design/organisms/sidebar/sidebar.component.html
+++ b/src/design/organisms/sidebar/sidebar.component.html
@@ -60,7 +60,7 @@
     <ul class="sidebar__footer footer">
       <li class="sidebar__entry entry">
         <a class="entry__link" [routerLink]="profileUrl">
-          <app-icon class="entry__icon" [icon]="'user-circle'"></app-icon>
+          <app-icon class="entry__icon" [icon]="'circle-user'"></app-icon>
           <span class="entry__text">Profile</span>
         </a>
       </li>
