--- a/src/design/organisms/user-row/user-row.component.html
+++ b/src/design/organisms/user-row/user-row.component.html
@@ -31,7 +31,7 @@
 
   <div class="row user-card__row">
     <div class="col-4">
-      <app-icon [icon]="'envelope-o'"></app-icon>
+      <app-icon [icon]="'envelope'"></app-icon>
       Email:
     </div>
     <div class="col-8">{{ user().email ?? "Not Provided" }}</div>
