--- a/src/design/organisms/icon-card-list/icon-card-list.component.html
+++ b/src/design/organisms/icon-card-list/icon-card-list.component.html
@@ -4,7 +4,7 @@
       <a
         class="entry__link"
         [routerLink]="article.link"
-        [title]="article.entryType | titlecase"
+        [title]="article.title"
       >
         <app-icon-card
           [icon]="article.icon"
