--- a/src/design/molecules/icon-card/icon-card.component.html
+++ b/src/design/molecules/icon-card/icon-card.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" [title]="title() | titlecase">
   <!-- Heading -->
   <header class="card-icon-top">
     <app-icon [icon]="icon()"></app-icon>
@@ -7,7 +7,7 @@
   <!-- Body -->
   <div class="card-body">
     <div class="card-title">
-      <strong> {{ title() | titlecase }} </strong>
+      <strong> {{ _title() | titlecase }} </strong>
     </div>
 
     <div class="card-subtitle">
