--- a/src/design/organisms/toast-overlay/toast-overlay.component.scss
+++ b/src/design/organisms/toast-overlay/toast-overlay.component.scss
@@ -18,7 +18,7 @@
   bottom: 10%;
   right: 10%;
   width: fit-content;
-
+  max-width: 50%;
   --negated-toast-padding: calc(var(--bs-toast-padding-x) * -1);
   --toast-padding-x: var(--bs-toast-padding-x);
   --toast-padding-y: calc(var(--bs-toast-padding-y) / 2);
@@ -115,7 +115,10 @@
   display: flex;
   flex-direction: column;
 
-  &__text {
+  &__text-container {
+    max-height: calc(var(--bs-body-font-size) * 8);
+    max-width: 100%;
+    overflow: auto;
   }
 
   &__button {
@@ -129,6 +132,7 @@
   &__button-container {
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
     gap: var(--spacer-3);
   }
 }
