--- a/src/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
+++ b/src/design/organisms/diaryentry-encounters/diaryentry-encounters.component.html
@@ -1,4 +1,4 @@
-<div class="container list">
+<div class="container list" [class.list--loading]="isUpdatingGlobally()">
   @if (!isUpdatingGlobally()) {
     <!-- Insert new first Encounter -->
     @if (state() === "EDIT") {
@@ -175,7 +175,7 @@
 </ng-template>
 
 <!-- Loading Spinner -->
-<ng-template #loading><app-spinner></app-spinner></ng-template>
+<ng-template #loading><app-spinner class="spinner"></app-spinner></ng-template>
 
 <ng-template #orderArrows let-context>
   <app-arrow-button
