--- a/src/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
+++ b/src/design/organisms/diaryentry-encounters/diaryentry-encounters.component.scss
@@ -4,6 +4,12 @@
   padding-left: var(--spacer-0);
   padding-right: var(--spacer-0);
 
+  &--loading {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
   &__buttons {
     padding: 0;
     margin-bottom: var(--spacer-2);
@@ -89,8 +95,8 @@
   }
 }
 
-app-spinner {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.spinner {
+  width: 100px;
+  height: 100px;
+  --thickness: 60px;
 }
